# candide

./: README.md  candide.cabal
lib/Candide/: Core.hs  Generators.hs  Server.hs
src/: CandideDaemon.hs  CreateOrigin.hs  Spool.hs
