name:                candide
version:             0.1.0.0
synopsis:            toy postgres datastore
description:         toy postgres datastore
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          oswyn.brent@anchor.com.au
copyright:           Anchor Systems 2015
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:anchor/candide.git

library
  exposed-modules:     Candide.Core
  build-depends:       base >=4.7 && <4.8
                     , bifunctors
                     , blaze-builder
                     , vaultaire-common
                     , pipes
                     , pipes-postgresql-simple
                     , postgresql-simple
                     , scientific
                     , text
                     , unordered-containers


  hs-source-dirs:      lib
  default-language:    Haskell2010

executable candide-from-spool
  main-is:             Spool.hs
  build-depends:       base >=4.7 && <4.8,
                       aeson,
                       bytestring,
                       candide,
                       containers,
                       directory,
                       mtl,
                       network-uri,
                       pipes,
                       pipes-safe,
                       spool,
                       split,
                       text,
                       vector,
                       optparse-applicative >= 0.11.0,
                       unordered-containers,
                       ceilometer-common,
                       chevalier-common,
                       vaultaire-common,
                       vaultaire-query
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -O2
                       -threaded
  default-language:    Haskell2010
