name:                candide
version:             0.1.0.0
synopsis:            toy postgres datastore
description:         toy postgres datastore
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          oswyn.brent@anchor.com.au
copyright:           Anchor Systems 2015
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:anchor/candide.git

library
  exposed-modules:     Candide.Core
                       Candide.Generators
                       Candide.Server
  build-depends:       base >=4.7 && <4.8
                     , async
                     , attoparsec
                     , bifunctors
                     , blaze-builder
                     , bytestring
                     , containers
                     , extra
                     , hslogger
                     , lifted-async
                     , mtl
                     , packer
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
                     , pipes-group
                     , pipes-postgresql-simple
                     , postgresql-simple
                     , QuickCheck
                     , scientific
                     , text
                     , time
                     , unordered-containers
                     , marquise
                     , vaultaire-common

  hs-source-dirs:      lib
  default-language:    Haskell2010

executable candide-create-origin
  main-is:             CreateOrigin.hs
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , optparse-applicative >= 0.11.0
                     , vaultaire-common
                     , candide

  hs-source-dirs:      src
  ghc-options:         -Wall
                       -O2
                       -threaded
  default-language:    Haskell2010

executable candided
  main-is:             CandideDaemon.hs
  build-depends:       base >=4.7 && <4.8
                     , async
                     , bytestring
                     , directory
                     , hslogger
                     , optparse-applicative >= 0.11.0
                     , vaultaire-common
                     , candide

  hs-source-dirs:      src
  ghc-options:         -Wall
                       -O2
                       -threaded
  default-language:    Haskell2010

executable candide-from-spool
  main-is:             Spool.hs
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , bytestring
                     , candide
                     , containers
                     , directory
                     , mtl
                     , network-uri
                     , pipes
                     , pipes-safe
                     , spool
                     , split
                     , text
                     , vector
                     , optparse-applicative >= 0.11.0
                     , unordered-containers
                     , vaultaire-common
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -O2
                       -threaded
  default-language:    Haskell2010
